ags (1.4.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reworked CoreAudio output
	* fixed wrong loop condition in ags_apply_presets.c

ags (1.4.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* disabled GLib-GObject fatal mask

ags (1.4.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong if statement in ags_route_dssi_audio_run.c causing DSSI silence
	* fixed potential SIGSEGV related to AgsRecyclingContext wrong ref count

ags (1.4.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed timestamp offset clipboard insert
	* fixed missing timestamp of notation

ags (1.4.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed integrity check of ags_recall_lv2_load()
	* fixed selection of notation region

ags (1.4.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing timestamp information in AgsAutomation clipboard
	* fixed if statement in ags_automation_find_specifier_with_type_and_line()
	* fixed missing return in ags_automation_get_value()
	* minor improvements

ags (1.4.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong ref count in ags_automation.c
	* fixed wrong ref count in ags_notation.c
	* fixed allow select all first and last acceleration of automation
	* improved AgsExportWindow to reset backend

ags (1.4.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong connectable interface of AgsRecallAudioRun
	* fixed AgsRecall::stop-persistent and do event invocation
	* exported symbols of ags_widget_marshal.c

ags (1.4.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted write double as exporting to audio file

ags (1.4.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented MIDI input callback of AgsCoreAudioPort
	* implemented ags_playable_read_int() and ags_playable_write_int()